fix grid title overflow

--- a/app/assets/stylesheets/posts_img.css
+++ b/app/assets/stylesheets/posts_img.css
@@ -68,6 +68,12 @@
   letter-spacing: 0.02em;
 }
 
+@media screen and (max-width: 1200px) {
+  #grid-title {
+    font-size: 13px;
+  }
+}
+
 #grid-caption {
   height: 125px;
   padding-top: 11px;
